deploy/base/homelab-svc/homelab-svc-ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: homelab-svc
  annotations:
    description: "Namespace for all core services for the network"
